0.7.0 (currently working on)
- [#2241] Change: Use bag->isEmpty() instead of bag->getObjectCountWithoutLimit() > 0 where possible
- [#1160] Change: In tx_seminars_bag load the object count without limit lazily
- [#1778] Feature: Provide an abstraction for session handling
- [#2232] Feature: Make tx_seminars_bag independent from tx_seminars_dbplugin
- [#403] Change: Remove sql_num_rows whereever possible
- [#2195] Feature: Move tx_seminars_pi1::searchWhere to the seminar bag builder
- [#1993] Feature: Implement the SPL iterator interface in the bag class
- [#2123] Fix: Huge memory consumption through createFakeFrontend() in seminars
- [#1901] Feature: Use more SQL indices
- [#2229] Feature: Add 'is_dummy_record=1' to the constructor call of the bags in their testcases
- [#2203] Change: Move tx_seminars_seminar::getAdditionalQueryForOtherDates() to tx_seminars_seminarbagbuilder
- [#2202] Change: Move tx_seminars_seminar::getAdditionalQueryForNextDay() to tx_seminars_seminarbagbuilder
- [#2114] Feature: Add a new flavor "favorites list"
- [#2199] Feature: Add a method limitToVip() to tx_seminars_seminarbagbuilder
- [#2205] Fix: tx_seminars_bagbuilder::setTestMode() does not work with additional tables
- [#2200] Feature: Add a method limitToDateAndSingleRecords() to tx_seminars_seminarbagbuilder
- [#2201] Feature: Add a method limitToOwner() to tx_seminars_seminarbagbuilder
- [#2204] Feature: Add a method setLimit() to tx_seminars_bagbuilder
- [#2198] Feature: Add a method limitToTopicRecords() to tx_seminars_seminarbagbuilder
- [#2196] Feature: Allow to set the orderBy via a method in tx_seminars_bagbuilder
- [#1580] Change: Move the seminarbag::getAdditionalQuery* functions to the seminarbagbuilder
- [#2158] Feature: Allow to add additional tables in the bag builder via a method
- [#1583] Feature: Add a registration bag builder
- [#2165] Feature: Show the accreditation number in the mod2 events list and registrations list